--- a/package.json
+++ b/package.json
@@ -42,9 +42,11 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@supabase/supabase-js": "^2.57.2",
     "@tanstack/react-query": "^5.83.0",
+    "@tiptap-pro/extension-ai-suggestion": "3.0.0-beta.39",
     "@tiptap/core": "^3.4.1",
     "@tiptap/extension-link": "^3.4.1",
     "@tiptap/extension-placeholder": "^3.4.1",
+    "@tiptap/pm": "^3.4.4",
     "@tiptap/react": "^3.4.1",
     "@tiptap/starter-kit": "^3.4.1",
     "ai": "^5.0.38",
